[package]
name = "resamplr"
version = "0.1.0"
authors = ["doomy <alexanderpaullozada@gmail.com>"]

[dependencies]
rocket = "*"
rocket_codegen = "*"
diesel = { version="1.1.1", features=["postgres"] }
diesel_codegen = { version = "*", features = ["postgres"] }

r2d2-diesel = "1.0.0"
r2d2 = "0.8.2"
dotenv = "0.9.0"
# JSON Deps
serde = "*"
serde_json = "*"
serde_derive = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]